force-app/main/default/objects/Badge_Assignments__c/Badge_Assignments__c.object-meta.xml
<CustomObject>
    <description>Object to assign Badges to Users</description>
    <label>Badge Awards</label>
    <nameField>
        <displayFormat>BA-{0000000}</displayFormat>
        <label>Badge Award ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Badge Awards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>