force-app/main/default/objects/Badge_Assignments__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge</label>
    <referenceTo>Badge__c</referenceTo>
    <relationshipName>Badge_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>