force-app/main/default/objects/Badge_Assignments__c/fields/Badge_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Badge_Expiry__c</fullName>
    <description>This field will show the expiry date for the issued badge</description>
    <formula>CreatedDate + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will show the expiry date for the issued badge</inlineHelpText>
    <label>Badge Expiry</label>
    <type>DateTime</type>
</CustomField>