force-app/main/default/objects/Badge_Assignments__c/fields/Badge_Image__c.field-meta.xml
<CustomField>
    <fullName>Badge_Image__c</fullName>
    <formula>Badge__r.Badge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Badge Image</label>
    <type>Text</type>
</CustomField>