force-app/main/default/objects/Badge_Assignments__c/fields/Confetti_Show__c.field-meta.xml
<CustomField>
    <fullName>Confetti_Show__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The BadgeAwardList LWC component uses this field to show/hide confetti to the user on badge assignment.</description>
    <label>Confetti Show</label>
    <type>Checkbox</type>
</CustomField>