force-app/main/default/objects/Badge_Assignments__c/fields/Times_Awarded__c.field-meta.xml
<CustomField>
    <fullName>Times_Awarded__c</fullName>
    <description>Counts the number of times an award has been issued to the user</description>
    <formula>if(  Badge__r.Name  = &quot;Copious Cases&quot;, User__r.NAS_of_Copious_Case_Badges__c , 
 if(  Badge__r.Name  = &quot;Fast Lane Award&quot; , User__r.NAS_of_Fast_Lane_Award_Badges__c ,
  if(  Badge__r.Name  = &quot;Mountain Sherpa&quot;, User__r.NAS_of_Mountain_Sherpa_Badges__c , 
   if(  Badge__r.Name  = &quot;Root Cause Champion&quot;, User__r.NAS_of_Root_Cause_Champion_Badges__c, 
    if(  Badge__r.Name  = &quot;IM Values&quot;,  User__r.NAS_of_IM_Values_Badges__c, 
     if(  Badge__r.Name  = &quot;Closed 1st Case Award&quot;, User__r.NAS_of_Closed_1st_Case_Badges__c, 
      if(  Badge__r.Name  = &quot;Customer Satisfaction Hero&quot;, User__r.NAS_of_Customer_Satisfaction_Hero_Badges__c, 
&quot;&quot; )))))))</formula>
    <label>Times Awarded</label>
    <type>Text</type>
</CustomField>