force-app/main/default/objects/Badge_Assignments__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Winner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Badge_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>