force-app/main/default/objects/Badge_Assignments__c/fields/Week_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Date__c</fullName>
    <description>This field is to capture the start date of the badge week</description>
    <formula>CreatedDate - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is to capture the start date of the badge week</inlineHelpText>
    <label>Week Start Date</label>
    <type>DateTime</type>
</CustomField>