force-app/main/default/objects/Badge_Assignments__c/fields/Winner_Role__c.field-meta.xml
<CustomField>
    <fullName>Winner_Role__c</fullName>
    <formula>User__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Winner Role</label>
    <type>Text</type>
</CustomField>